Fixed most of repository tests