@@ -34,8 +34,7 @@ public class GeneratedAttachmentRepositoryIT {
     @BeforeAll
     @ActivateRequestContext
     public void clearDatabase() {
-        List<GeneratedAttachmentEntity> allEntities = new ArrayList<>();
-        generatedAttachmentRepository.findAll().forEach(allEntities::add);
+        List<GeneratedAttachmentEntity> allEntities = new ArrayList<>(generatedAttachmentRepository.findAll());
         if (!allEntities.isEmpty()) {
             generatedAttachmentRepository.deleteAll(allEntities);
         }
@@ -43,21 +42,29 @@ public class GeneratedAttachmentRepositoryIT {
 
     @Test
     public void testSaveAndFindById() {
-        EmailHistoryEntity emailHistory = new EmailHistoryEntity("HIST-001", new Date(), "Sample Text", "Subject", new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), false, false, new ArrayList<>(), true, new ArrayList<>());
-        emailHistoryRepository.create(emailHistory);
+        // Create EmailHistoryEntity and PrintTemplateEntity with null ID
+        EmailHistoryEntity emailHistory = new EmailHistoryEntity(
+                null, new Date(), "Sample Text", "Subject",
+                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(),
+                false, false, new ArrayList<>(), true, new ArrayList<>()
+        );
+        emailHistory = emailHistoryRepository.create(emailHistory);
 
-        PrintTemplateEntity printTemplate = new PrintTemplateEntity("TPL-001", "Template Content", 1, "Invoice Template", "invoice.pdf");
-        printTemplateRepository.create(printTemplate);
+        PrintTemplateEntity printTemplate = new PrintTemplateEntity(
+                null, "Template Content", 1, "Invoice Template", "invoice.pdf"
+        );
+        printTemplate = printTemplateRepository.create(printTemplate);
 
         Map<String, Object> attributes = Map.of("key1", "value1", "key2", 123);
 
+        // Pass null as the first parameter to GeneratedAttachmentEntity
         GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity(
-                "ATT-001", "user@example.com", attributes, emailHistory, printTemplate
+                null, "user@example.com", attributes, emailHistory, printTemplate
         );
+        entity = generatedAttachmentRepository.create(entity);
+        String generatedId = entity.getId();
 
-        generatedAttachmentRepository.create(entity);
-
-        GeneratedAttachmentEntity retrieved = generatedAttachmentRepository.findById("ATT-001");
+        GeneratedAttachmentEntity retrieved = generatedAttachmentRepository.findById(generatedId);
         Assertions.assertNotNull(retrieved, "Entity should be present.");
         Assertions.assertEquals("user@example.com", retrieved.getEmail(), "Email should match.");
         Assertions.assertEquals(emailHistory.getId(), retrieved.getEmailHistory().getId(), "Email history ID should match.");
@@ -67,36 +74,55 @@ public class GeneratedAttachmentRepositoryIT {
 
     @Test
     public void testFindByEmailAndHistoryAndTemplate() {
-        EmailHistoryEntity emailHistory = new EmailHistoryEntity("HIST-004", new Date(), "Email Content", "Subject", new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), false, false, new ArrayList<>(), true, new ArrayList<>());
-        emailHistoryRepository.create(emailHistory);
+        EmailHistoryEntity emailHistory = new EmailHistoryEntity(
+                null, new Date(), "Email Content", "Subject",
+                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(),
+                false, false, new ArrayList<>(), true, new ArrayList<>()
+        );
+        emailHistory = emailHistoryRepository.create(emailHistory);
 
-        PrintTemplateEntity printTemplate = new PrintTemplateEntity("TPL-002", "Report Content", 2, "Report Template", "report.pdf");
-        printTemplateRepository.create(printTemplate);
+        PrintTemplateEntity printTemplate = new PrintTemplateEntity(
+                null, "Report Content", 2, "Report Template", "report.pdf"
+        );
+        printTemplate = printTemplateRepository.create(printTemplate);
 
-        GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity("ATT-006", "user@example.com", Map.of("key", "val"), emailHistory, printTemplate);
-        generatedAttachmentRepository.create(entity);
+        GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity(
+                null, "user@example.com", Map.of("key", "val"), emailHistory, printTemplate
+        );
+        entity = generatedAttachmentRepository.create(entity);
 
-        List<GeneratedAttachmentEntity> results = generatedAttachmentRepository.findByEmailAndHistoryAndTemplate("HIST-004", "user@example.com", "TPL-002");
+        List<GeneratedAttachmentEntity> results = generatedAttachmentRepository.findByEmailAndHistoryAndTemplate(
+                emailHistory.getId(), "user@example.com", printTemplate.getId()
+        );
         Assertions.assertEquals(1, results.size(), "Expected 1 matching attachment.");
-        Assertions.assertEquals("ATT-006", results.getFirst().getId(), "Expected ATT-006.");
+        Assertions.assertEquals(entity.getId(), results.get(0).getId(), "Expected generated ID to match.");
     }
 
     @Test
     public void testUpdateEntity() {
-        EmailHistoryEntity emailHistory = new EmailHistoryEntity("HIST-005", new Date(), "Sample Content", "Some Subject", new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), false, false, new ArrayList<>(), true, new ArrayList<>());
-        emailHistoryRepository.create(emailHistory);
+        EmailHistoryEntity emailHistory = new EmailHistoryEntity(
+                null, new Date(), "Sample Content", "Some Subject",
+                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(),
+                false, false, new ArrayList<>(), true, new ArrayList<>()
+        );
+        emailHistory = emailHistoryRepository.create(emailHistory);
 
-        PrintTemplateEntity printTemplate = new PrintTemplateEntity("TPL-003", "Contract Template", 3, "Contract", "contract.pdf");
-        printTemplateRepository.create(printTemplate);
+        PrintTemplateEntity printTemplate = new PrintTemplateEntity(
+                null, "Contract Template", 3, "Contract", "contract.pdf"
+        );
+        printTemplate = printTemplateRepository.create(printTemplate);
 
-        GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity("ATT-007", "test@example.com", Map.of("field", "old"), emailHistory, printTemplate);
-        generatedAttachmentRepository.create(entity);
+        GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity(
+                null, "test@example.com", Map.of("field", "old"), emailHistory, printTemplate
+        );
+        entity = generatedAttachmentRepository.create(entity);
+        String generatedId = entity.getId();
 
         entity.setEmail("updated@example.com");
         entity.setAttributes(Map.of("field", "new"));
         generatedAttachmentRepository.create(entity);
 
-        GeneratedAttachmentEntity updated = generatedAttachmentRepository.findById("ATT-007");
+        GeneratedAttachmentEntity updated = generatedAttachmentRepository.findById(generatedId);
         Assertions.assertNotNull(updated, "Entity should exist after update.");
         Assertions.assertEquals("updated@example.com", updated.getEmail(), "Updated email should match.");
         Assertions.assertEquals("new", updated.getAttributes().get("field"), "Updated attribute should match.");
@@ -104,15 +130,20 @@ public class GeneratedAttachmentRepositoryIT {
 
     @Test
     public void testDeleteEntity() {
-        PrintTemplateEntity printTemplate = new PrintTemplateEntity("TPL-004", "Simple Template", 4, "Simple Report", "simple.pdf");
-        printTemplateRepository.create(printTemplate);
+        PrintTemplateEntity printTemplate = new PrintTemplateEntity(
+                null, "Simple Template", 4, "Simple Report", "simple.pdf"
+        );
+        printTemplate = printTemplateRepository.create(printTemplate);
 
-        GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity("ATT-008", "delete@example.com", Map.of("key", "val"), null, printTemplate);
-        generatedAttachmentRepository.create(entity);
+        GeneratedAttachmentEntity entity = new GeneratedAttachmentEntity(
+                null, "delete@example.com", Map.of("key", "val"), null, printTemplate
+        );
+        entity = generatedAttachmentRepository.create(entity);
+        String generatedId = entity.getId();
 
-        generatedAttachmentRepository.deleteById("ATT-008");
+        generatedAttachmentRepository.deleteById(generatedId);
 
-        GeneratedAttachmentEntity deleted = generatedAttachmentRepository.findById("ATT-008");
+        GeneratedAttachmentEntity deleted = generatedAttachmentRepository.findById(generatedId);
         Assertions.assertNull(deleted, "Entity should be deleted.");
     }
 }
