@@ -6,14 +6,17 @@ import cz.inspire.sport.repository.OvladacObjektuRepository;
 import io.quarkus.test.junit.QuarkusTest;
 import jakarta.enterprise.context.control.ActivateRequestContext;
 import jakarta.inject.Inject;
-import jakarta.persistence.EntityManager;
 import jakarta.transaction.Transactional;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Order;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
 
 import java.util.List;
-import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 @Transactional
 @QuarkusTest
@@ -26,9 +29,6 @@ public class OvladacObjektuRepositoryIT {
     @Inject
     DatabaseCleaner databaseCleaner;
 
-    @Inject
-    EntityManager em;
-
     @BeforeAll
     @ActivateRequestContext
     public void clearDatabase() {
@@ -39,62 +39,55 @@ public class OvladacObjektuRepositoryIT {
         return new OvladacObjektuEntity(id, idOvladace, List.of(1, 2), true, false, 10, 5, objektId);
     }
 
-    @Test
     @Order(1)
+    @Test
     void testSaveAndFindById() {
+        // Pass null for the ID so that it is generated automatically.
         OvladacObjektuEntity entity = createOvladacObjektu(null, "OVL-001", "OBJ-001");
-        em.persist(entity);
-        em.flush();
+        entity = ovladacObjektuRepository.create(entity);
 
-        Optional<OvladacObjektuEntity> result = ovladacObjektuRepository.findById(entity.getId());
-
-        assertTrue(result.isPresent());
-        assertEquals("OVL-001", result.get().getIdOvladace());
+        OvladacObjektuEntity result = ovladacObjektuRepository.findById(entity.getId());
+        assertNotNull(result, "Entity should be found.");
+        assertEquals("OVL-001", result.getIdOvladace(), "idOvladace should match.");
     }
 
-    @Test
     @Order(2)
+    @Test
     void testFindWithOvladacObjektu() {
         OvladacObjektuEntity entity1 = createOvladacObjektu(null, "OVL-002", "OBJ-002");
         OvladacObjektuEntity entity2 = createOvladacObjektu(null, "OVL-002", "OBJ-003");
-        em.persist(entity1);
-        em.persist(entity2);
-        em.flush();
+        entity1 = ovladacObjektuRepository.create(entity1);
+        entity2 = ovladacObjektuRepository.create(entity2);
 
         List<OvladacObjektuEntity> result = ovladacObjektuRepository.findWithOvladacObjektu("OVL-002");
-
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        assertNotNull(result, "Result should not be null.");
+        assertEquals(2, result.size(), "Expected 2 results.");
     }
 
-    @Test
     @Order(3)
+    @Test
     void testFindByObjekt() {
         OvladacObjektuEntity entity = createOvladacObjektu(null, "OVL-003", "OBJ-004");
-        em.persist(entity);
-        em.flush();
+        entity = ovladacObjektuRepository.create(entity);
 
         List<OvladacObjektuEntity> result = ovladacObjektuRepository.findByObjekt("OBJ-004");
-
-        assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals(entity.getId(), result.getFirst().getId());
+        assertNotNull(result, "Result should not be null.");
+        assertEquals(1, result.size(), "Expected 1 result.");
+        assertEquals(entity.getId(), result.get(0).getId(), "IDs should match.");
     }
 
-    @Test
     @Order(4)
+    @Test
     void testDeleteEntity() {
         OvladacObjektuEntity entity = createOvladacObjektu(null, "OVL-004", "OBJ-005");
-        em.persist(entity);
-        em.flush();
+        entity = ovladacObjektuRepository.create(entity);
 
-        Optional<OvladacObjektuEntity> result = ovladacObjektuRepository.findById(entity.getId());
-        assertTrue(result.isPresent());
+        OvladacObjektuEntity result = ovladacObjektuRepository.findById(entity.getId());
+        assertNotNull(result, "Entity should exist before deletion.");
 
-        em.remove(entity);
-        em.flush();
+        ovladacObjektuRepository.deleteById(entity.getId());
 
         result = ovladacObjektuRepository.findById(entity.getId());
-        assertFalse(result.isPresent());
+        assertNull(result, "Entity should be deleted.");
     }
 }
