@@ -1,16 +1,18 @@
 package RepositoryTests.Sport;
 
 import RepositoryTests.DatabaseCleaner;
-import cz.inspire.sport.entity.PodminkaRezervaceEntity;
 import cz.inspire.sport.entity.ObjektEntity;
+import cz.inspire.sport.entity.PodminkaRezervaceEntity;
 import cz.inspire.sport.repository.PodminkaRezervaceRepository;
 import io.quarkus.test.junit.QuarkusTest;
-import jakarta.data.Limit;
 import jakarta.enterprise.context.control.ActivateRequestContext;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import jakarta.transaction.Transactional;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Order;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
 
 import java.util.List;
 
@@ -53,19 +55,15 @@ public class PodminkaRezervaceRepositoryIT {
         ObjektEntity objekt = createObjekt(null);
         em.persist(objekt);
 
-        PodminkaRezervaceEntity entity1 = createPodminkaRezervace(null, 3, "RZ-001", objekt);
-        PodminkaRezervaceEntity entity2 = createPodminkaRezervace(null, 1, "RZ-002", objekt);
-        PodminkaRezervaceEntity entity3 = createPodminkaRezervace(null, 2, "RZ-003", objekt);
-
-        em.persist(entity1);
-        em.persist(entity2);
-        em.persist(entity3);
-        em.flush();
+        PodminkaRezervaceEntity entity1 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 3, "RZ-001", objekt));
+        PodminkaRezervaceEntity entity2 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 1, "RZ-002", objekt));
+        PodminkaRezervaceEntity entity3 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 2, "RZ-003", objekt));
 
         List<PodminkaRezervaceEntity> result = podminkaRezervaceRepository.findAllOrdered();
 
         assertNotNull(result);
         assertEquals(3, result.size());
+        // Expect ordering by priority ascending (i.e. lower priority value first)
         assertEquals(entity2.getId(), result.get(0).getId());
         assertEquals(entity3.getId(), result.get(1).getId());
         assertEquals(entity1.getId(), result.get(2).getId());
@@ -77,17 +75,11 @@ public class PodminkaRezervaceRepositoryIT {
         ObjektEntity objekt = createObjekt(null);
         em.persist(objekt);
 
-        PodminkaRezervaceEntity entity1 = createPodminkaRezervace(null, 3, "RZ-004", objekt);
-        PodminkaRezervaceEntity entity2 = createPodminkaRezervace(null, 1, "RZ-005", objekt);
-        PodminkaRezervaceEntity entity3 = createPodminkaRezervace(null, 2, "RZ-006", objekt);
+        PodminkaRezervaceEntity entity1 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 3, "RZ-004", objekt));
+        PodminkaRezervaceEntity entity2 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 1, "RZ-005", objekt));
+        PodminkaRezervaceEntity entity3 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 2, "RZ-006", objekt));
 
-        em.persist(entity1);
-        em.persist(entity2);
-        em.persist(entity3);
-        em.flush();
-
-        List<PodminkaRezervaceEntity> result = podminkaRezervaceRepository.findAll(Limit.of(2));
-
+        List<PodminkaRezervaceEntity> result = podminkaRezervaceRepository.findAll(2, 0);
         assertNotNull(result);
         assertEquals(2, result.size());
     }
@@ -98,14 +90,10 @@ public class PodminkaRezervaceRepositoryIT {
         ObjektEntity objekt = createObjekt(null);
         em.persist(objekt);
 
-        PodminkaRezervaceEntity entity1 = createPodminkaRezervace(null, 1, "RZ-007", objekt);
-        PodminkaRezervaceEntity entity2 = createPodminkaRezervace(null, 2, "RZ-008", objekt);
-        em.persist(entity1);
-        em.persist(entity2);
-        em.flush();
+        PodminkaRezervaceEntity entity1 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 1, "RZ-007", objekt));
+        PodminkaRezervaceEntity entity2 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 2, "RZ-008", objekt));
 
-        List<PodminkaRezervaceEntity> result = podminkaRezervaceRepository.findByObjekt(objekt.getId(), Limit.of(1));
-
+        List<PodminkaRezervaceEntity> result = podminkaRezervaceRepository.findByObjekt(objekt.getId(), 1, 0);
         assertNotNull(result);
         assertEquals(1, result.size());
     }
@@ -116,14 +104,10 @@ public class PodminkaRezervaceRepositoryIT {
         ObjektEntity objekt = createObjekt(null);
         em.persist(objekt);
 
-        PodminkaRezervaceEntity entity1 = createPodminkaRezervace(null, 1, "RZ-009", objekt);
-        PodminkaRezervaceEntity entity2 = createPodminkaRezervace(null, 2, "RZ-010", objekt);
-        em.persist(entity1);
-        em.persist(entity2);
-        em.flush();
+        PodminkaRezervaceEntity entity1 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 1, "RZ-009", objekt));
+        PodminkaRezervaceEntity entity2 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 2, "RZ-010", objekt));
 
         Long count = podminkaRezervaceRepository.countAllByObject(objekt.getId());
-
         assertEquals(2, count);
     }
 
@@ -133,11 +117,9 @@ public class PodminkaRezervaceRepositoryIT {
         Long initialCount = podminkaRezervaceRepository.countAll();
 
         ObjektEntity objekt = createObjekt(null);
-        PodminkaRezervaceEntity entity = createPodminkaRezervace(null, 3, "RZ-011", objekt);
-
         em.persist(objekt);
-        em.persist(entity);
-        em.flush();
+
+        PodminkaRezervaceEntity entity = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 3, "RZ-011", objekt));
 
         Long newCount = podminkaRezervaceRepository.countAll();
         assertEquals(initialCount + 1, newCount);
@@ -149,15 +131,12 @@ public class PodminkaRezervaceRepositoryIT {
         ObjektEntity objekt = createObjekt(null);
         em.persist(objekt);
 
-        PodminkaRezervaceEntity entity = createPodminkaRezervace(null, 2, "RZ-012", objekt);
-        em.persist(entity);
-        em.flush();
+        PodminkaRezervaceEntity entity = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 2, "RZ-012", objekt));
 
         List<String> result = podminkaRezervaceRepository.getObjectIdsByReservationConditionObject("RZ-012");
-
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(objekt.getId(), result.getFirst());
+        assertEquals(objekt.getId(), result.get(0));
     }
 
     @Test
@@ -166,14 +145,10 @@ public class PodminkaRezervaceRepositoryIT {
         ObjektEntity objekt = createObjekt(null);
         em.persist(objekt);
 
-        PodminkaRezervaceEntity entity1 = createPodminkaRezervace(null, 5, "RZ-013", objekt);
-        PodminkaRezervaceEntity entity2 = createPodminkaRezervace(null, 10, "RZ-014", objekt);
-        em.persist(entity1);
-        em.persist(entity2);
-        em.flush();
+        PodminkaRezervaceEntity entity1 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 5, "RZ-013", objekt));
+        PodminkaRezervaceEntity entity2 = podminkaRezervaceRepository.create(createPodminkaRezervace(null, 10, "RZ-014", objekt));
 
         Long maxPriority = podminkaRezervaceRepository.getMaxPriority();
-
         assertEquals(10, maxPriority);
     }
 }
